objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>funcarea__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Accounts / Finance / Tax / CS / Audit</fullName>
                    <color>#FFFFFF</color>
                    <label>Accounts / Finance / Tax / CS / Audit</label>
                </value>
                <value>
                    <fullName>Agent</fullName>
                    <color>#FFFFFF</color>
                    <label>Agent</label>
                </value>
                <value>
                    <fullName>Architecture / Interior Design</fullName>
                    <color>#FFFFFF</color>
                    <label>Architecture / Interior Design</label>
                </value>
                <value>
                    <fullName>Banking / Insurance</fullName>
                    <color>#FFFFFF</color>
                    <label>Banking / Insurance</label>
                </value>
                <value>
                    <fullName>Content / Journalism</fullName>
                    <color>#FFFFFF</color>
                    <label>Content / Journalism</label>
                </value>
                <value>
                    <fullName>Corporate Planning / Consulting</fullName>
                    <color>#FFFFFF</color>
                    <label>Corporate Planning / Consulting</label>
                </value>
                <value>
                    <fullName>Engineering Design / R&amp;D</fullName>
                    <color>#FFFFFF</color>
                    <label>Engineering Design / R&amp;D</label>
                </value>
                <value>
                    <fullName>Export / Import / Merchandising</fullName>
                    <color>#FFFFFF</color>
                    <label>Export / Import / Merchandising</label>
                </value>
                <value>
                    <fullName>Fashion / Garments / Merchandising</fullName>
                    <color>#FFFFFF</color>
                    <label>Fashion / Garments / Merchandising</label>
                </value>
                <value>
                    <fullName>Guards / Security Services</fullName>
                    <color>#FFFFFF</color>
                    <label>Guards / Security Services</label>
                </value>
                <value>
                    <fullName>Hotels / Restaurants</fullName>
                    <color>#FFFFFF</color>
                    <label>Hotels / Restaurants</label>
                </value>
                <value>
                    <fullName>HR / Administration / IR</fullName>
                    <color>#FFFFFF</color>
                    <label>HR / Administration / IR</label>
                </value>
                <value>
                    <fullName>IT Software - Client Server</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software - Client Server</label>
                </value>
                <value>
                    <fullName>IT Software - Mainframe</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software - Mainframe</label>
                </value>
                <value>
                    <fullName>IT Software - Middleware</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software - Middleware</label>
                </value>
                <value>
                    <fullName>IT Software - Mobile</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software - Mobile</label>
                </value>
                <value>
                    <fullName>IT Software - Other</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software - Other</label>
                </value>
                <value>
                    <fullName>IT Software - System Programming</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software - System Programming</label>
                </value>
                <value>
                    <fullName>IT Software - Telecom Software</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software - Telecom Software</label>
                </value>
                <value>
                    <fullName>IT Software- Application Programming / Maintenance</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software- Application Programming / Maintenance</label>
                </value>
                <value>
                    <fullName>IT Software- DBA / Datawarehousing</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software- DBA / Datawarehousing</label>
                </value>
                <value>
                    <fullName>IT Software- E-Commerce / Internet Technologies</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software- E-Commerce / Internet Technologies</label>
                </value>
                <value>
                    <fullName>IT Software- Embedded /EDA /VLSI /ASIC /Chip Des.</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software- Embedded /EDA /VLSI /ASIC /Chip Des.</label>
                </value>
                <value>
                    <fullName>IT Software- ERP / CRM</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software- ERP / CRM</label>
                </value>
                <value>
                    <fullName>IT Software- Network Administration / Security</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software- Network Administration / Security</label>
                </value>
                <value>
                    <fullName>IT Software- QA &amp; Testing</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software- QA &amp; Testing</label>
                </value>
                <value>
                    <fullName>IT Software- Systems / EDP / MIS</fullName>
                    <color>#FFFFFF</color>
                    <label>IT Software- Systems / EDP / MIS</label>
                </value>
                <value>
                    <fullName>IT- Hardware / Telecom / Technical Staff / Support</fullName>
                    <color>#FFFFFF</color>
                    <label>IT- Hardware / Telecom / Technical Staff / Support</label>
                </value>
                <value>
                    <fullName>ITES / BPO / KPO / Customer Service / Operations</fullName>
                    <color>#FFFFFF</color>
                    <label>ITES / BPO / KPO / Customer Service / Operations</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maddress__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interview__c</fullName>
        <label>Interview #</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <color>#FFFFFF</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#FFFFFF</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#FFFFFF</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#FFFFFF</color>
                    <label>4</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expyears1__c</fullName>
        <label>Experience Years1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <color>#FFFFFF</color>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <color>#FFFFFF</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#FFFFFF</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#FFFFFF</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#FFFFFF</color>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <color>#FFFFFF</color>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <color>#FFFFFF</color>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <color>#FFFFFF</color>
                    <label>7</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <color>#FFFFFF</color>
                    <label>8</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <color>#FFFFFF</color>
                    <label>9</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <color>#FFFFFF</color>
                    <label>10</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <color>#FFFFFF</color>
                    <label>11</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <color>#FFFFFF</color>
                    <label>12</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <color>#FFFFFF</color>
                    <label>13</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <color>#FFFFFF</color>
                    <label>14</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <color>#FFFFFF</color>
                    <label>15</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <color>#FFFFFF</color>
                    <label>16</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <color>#FFFFFF</color>
                    <label>17</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <color>#FFFFFF</color>
                    <label>18</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <color>#FFFFFF</color>
                    <label>19</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <color>#FFFFFF</color>
                    <label>20</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <color>#FFFFFF</color>
                    <label>21</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <color>#FFFFFF</color>
                    <label>22</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <color>#FFFFFF</color>
                    <label>23</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <color>#FFFFFF</color>
                    <label>24</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <color>#FFFFFF</color>
                    <label>25</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <color>#FFFFFF</color>
                    <label>26</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <color>#FFFFFF</color>
                    <label>27</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <color>#FFFFFF</color>
                    <label>28</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>expyears2__c</fullName>
        <label>Experience Years2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <color>#FFFFFF</color>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <color>#FFFFFF</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#FFFFFF</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#FFFFFF</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#FFFFFF</color>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <color>#FFFFFF</color>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <color>#FFFFFF</color>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <color>#FFFFFF</color>
                    <label>7</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <color>#FFFFFF</color>
                    <label>8</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <color>#FFFFFF</color>
                    <label>9</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <color>#FFFFFF</color>
                    <label>10</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <color>#FFFFFF</color>
                    <label>11</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <color>#FFFFFF</color>
                    <label>12</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <color>#FFFFFF</color>
                    <label>13</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <color>#FFFFFF</color>
                    <label>14</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <color>#FFFFFF</color>
                    <label>15</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <color>#FFFFFF</color>
                    <label>16</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <color>#FFFFFF</color>
                    <label>17</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <color>#FFFFFF</color>
                    <label>18</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <color>#FFFFFF</color>
                    <label>19</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <color>#FFFFFF</color>
                    <label>20</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <color>#FFFFFF</color>
                    <label>21</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <color>#FFFFFF</color>
                    <label>22</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <color>#FFFFFF</color>
                    <label>23</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <color>#FFFFFF</color>
                    <label>24</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <color>#FFFFFF</color>
                    <label>25</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <color>#FFFFFF</color>
                    <label>26</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <color>#FFFFFF</color>
                    <label>27</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <color>#FFFFFF</color>
                    <label>28</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>expyears3__c</fullName>
        <label>Experience Years3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <color>#FFFFFF</color>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <color>#FFFFFF</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#FFFFFF</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#FFFFFF</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#FFFFFF</color>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <color>#FFFFFF</color>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <color>#FFFFFF</color>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <color>#FFFFFF</color>
                    <label>7</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <color>#FFFFFF</color>
                    <label>8</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <color>#FFFFFF</color>
                    <label>9</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <color>#FFFFFF</color>
                    <label>10</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <color>#FFFFFF</color>
                    <label>11</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <color>#FFFFFF</color>
                    <label>12</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <color>#FFFFFF</color>
                    <label>13</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <color>#FFFFFF</color>
                    <label>14</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <color>#FFFFFF</color>
                    <label>15</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <color>#FFFFFF</color>
                    <label>16</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <color>#FFFFFF</color>
                    <label>17</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <color>#FFFFFF</color>
                    <label>18</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <color>#FFFFFF</color>
                    <label>19</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <color>#FFFFFF</color>
                    <label>20</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <color>#FFFFFF</color>
                    <label>21</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <color>#FFFFFF</color>
                    <label>22</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <color>#FFFFFF</color>
                    <label>23</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <color>#FFFFFF</color>
                    <label>24</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <color>#FFFFFF</color>
                    <label>25</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <color>#FFFFFF</color>
                    <label>26</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <color>#FFFFFF</color>
                    <label>27</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <color>#FFFFFF</color>
                    <label>28</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>keyskills__c</fullName>
        <label>Key Skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lastused1__c</fullName>
        <label>Last Used1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>2012</fullName>
                    <color>#FFFFFF</color>
                    <label>2012</label>
                </value>
                <value>
                    <fullName>2011</fullName>
                    <color>#FFFFFF</color>
                    <label>2011</label>
                </value>
                <value>
                    <fullName>2010</fullName>
                    <color>#FFFFFF</color>
                    <label>2010</label>
                </value>
                <value>
                    <fullName>2009</fullName>
                    <color>#FFFFFF</color>
                    <label>2009</label>
                </value>
                <value>
                    <fullName>2008</fullName>
                    <color>#FFFFFF</color>
                    <label>2008</label>
                </value>
                <value>
                    <fullName>2007</fullName>
                    <color>#FFFFFF</color>
                    <label>2007</label>
                </value>
                <value>
                    <fullName>2006</fullName>
                    <color>#FFFFFF</color>
                    <label>2006</label>
                </value>
                <value>
                    <fullName>2005</fullName>
                    <color>#FFFFFF</color>
                    <label>2005</label>
                </value>
                <value>
                    <fullName>2004</fullName>
                    <color>#FFFFFF</color>
                    <label>2004</label>
                </value>
                <value>
                    <fullName>2003</fullName>
                    <color>#FFFFFF</color>
                    <label>2003</label>
                </value>
                <value>
                    <fullName>2002</fullName>
                    <color>#FFFFFF</color>
                    <label>2002</label>
                </value>
                <value>
                    <fullName>2001</fullName>
                    <color>#FFFFFF</color>
                    <label>2001</label>
                </value>
                <value>
                    <fullName>2000</fullName>
                    <color>#FFFFFF</color>
                    <label>2000</label>
                </value>
                <value>
                    <fullName>1999</fullName>
                    <color>#FFFFFF</color>
                    <label>1999</label>
                </value>
                <value>
                    <fullName>1998</fullName>
                    <color>#FFFFFF</color>
                    <label>1998</label>
                </value>
                <value>
                    <fullName>1997</fullName>
                    <color>#FFFFFF</color>
                    <label>1997</label>
                </value>
                <value>
                    <fullName>1996</fullName>
                    <color>#FFFFFF</color>
                    <label>1996</label>
                </value>
                <value>
                    <fullName>1995</fullName>
                    <color>#FFFFFF</color>
                    <label>1995</label>
                </value>
                <value>
                    <fullName>1994</fullName>
                    <color>#FFFFFF</color>
                    <label>1994</label>
                </value>
                <value>
                    <fullName>1993</fullName>
                    <color>#FFFFFF</color>
                    <label>1993</label>
                </value>
                <value>
                    <fullName>1992</fullName>
                    <color>#FFFFFF</color>
                    <label>1992</label>
                </value>
                <value>
                    <fullName>1991</fullName>
                    <color>#FFFFFF</color>
                    <label>1991</label>
                </value>
                <value>
                    <fullName>1990</fullName>
                    <color>#FFFFFF</color>
                    <label>1990</label>
                </value>
                <value>
                    <fullName>1989</fullName>
                    <color>#FFFFFF</color>
                    <label>1989</label>
                </value>
                <value>
                    <fullName>1988</fullName>
                    <color>#FFFFFF</color>
                    <label>1988</label>
                </value>
                <value>
                    <fullName>1987</fullName>
                    <color>#FFFFFF</color>
                    <label>1987</label>
                </value>
                <value>
                    <fullName>1986</fullName>
                    <color>#FFFFFF</color>
                    <label>1986</label>
                </value>
                <value>
                    <fullName>1985</fullName>
                    <color>#FFFFFF</color>
                    <label>1985</label>
                </value>
                <value>
                    <fullName>1984</fullName>
                    <color>#FFFFFF</color>
                    <label>1984</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>